tests/error/label_defined_not_used.gw
// [contains] defined but not used
test:
;
